# atelier

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/agents/: default.agent.md
backend/: main.py  requirements.txt
backend/app/: config.py
backend/app/agents/: graph.py  tools.py
backend/app/models/: __init__.py  agent.py  chat.py  project.py  user.py
backend/app/routes/: __init__.py  agents.py  chat.py  files.py  projects.py  settings.py
backend/app/schemas/: __init__.py  agent.py  chat.py  project.py  user.py
backend/app/services/: ai_service.py  context_service.py  file_service.py  indexing_service.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: Layout.tsx  Sidebar.tsx
src/lib/: api.ts
src/pages/: Onboarding.tsx  ProjectDetail.tsx  Projects.tsx  Settings.tsx
